...
        _viewModel = StateObject(wrappedValue: AuthenticationViewModel(authManager: authManager))
    }

    var body: some View {
        ScrollView(.vertical, showsIndicators: false) {
            VStack {
                Text("Sign In / Sign Up")
                    .font(.system(size: 34, weight: .bold))
                    .foregroundColor(.white)
                    .padding(.vertical, 64)

                VStack(spacing: 24) {
                    CustomTextField(
...
                            .foregroundColor(.appRed)
                            .multilineTextAlignment(.center)
                    }
                    
                    CustomButton(
                        action: { viewModel.submit() },
                        title: viewModel.isLoading ? "Processing..." : "Sign In",
                        width: 242
                    )
                    .disabled(!viewModel.canSubmit)
                    .opacity(viewModel.canSubmit ? 1.0 : 0.5)
                }

...
