...
                    viewModel.validateAddressOnSubmit { success in
                        if success {
                            viewModel.createEvent()
                        }
                    }
                },
                title: viewModel.isCreatingEvent ? "Creating..." : "Validate"
            )
            .disabled(!viewModel.canSubmit)
            .opacity(viewModel.canSubmit ? 1.0 : 0.5)
            .padding(.vertical)
        }
        .padding()
...
        }
        .onChange(of: viewModel.shouldDismiss) {
            if viewModel.shouldDismiss {
                dismiss()
            }
        }
        .customBackToolbar(text: "Creation of an event")
        .appBackground
    }
}

#Preview {
    EventCreationView()
...
